package org.example.Practica2;

public interface DeportiveActions {

    public void train();
    public void playMatch(String rival);

}
