package org.example.Practica2;

public enum Positions {

    PORTERO , DEFENSA , CENTROCAMPISTA , DELATERO

}
