@startuml

package org.example.Practica2 {

    interface IntegratesFunctions {
        +focus()
        +travel(String city)
        +celebrateGol()
    }

    interface DeportiveActions {
        +train()
        +playMatch(String rival)
    }

    class MutxamelFC {
        +name: String
        +age: int
    }

    class Trainer extends MutxamelFC implements DeportiveActions {
        -format: String = "'^[0-9]-[0-9]-[0-9]$'"
        -teams: Teams
        -soccerTraining: String
        +train()
        +playMatch(String rival)
        +focus()
        +travel(String city)
        +celebrateGol()
        +planTrain()
        +makeChanges()
    }

    enum Teams {
        BENJAMIN, ALEVIN, INFANTIL, CADETE, JUVENIL, SENIOR
    }

    enum Positions {
        PORTERO, DEFENSA, CENTROCAMPISTA, DELANTERO
    }

    class Player extends MutxamelFC implements DeportiveActions {
        -category: Teams
        -positions: Positions
        -dorsal: int
        +train()
        +playMatch(String rival)
        +focus()
        +travel(String city)
        +celebrateGol()
        +warmUp()
        +rest()
        +scoreGol()
    }

    class Partner extends MutxamelFC {
        -member: Player
        -relationShip: String
        +focus()
        +travel(String city)
        +celebrateGol()
        +encourageTeam()
    }

    class Masseur extends MutxamelFC {
        -degree: String
        -experienceYears: int
        +focus()
        +travel(String city)
        +celebrateGol()
        +giveMassage(Player player)
    }

    Player --> Teams
    Player --> Positions
    Trainer --> Teams
    Partner --> Player
    IntegratesFunctions <|.. MutxamelFC

}
@enduml
